--- a/mock-wallet/Cargo.toml
+++ b/mock-wallet/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hex-literal = "0.4.1"
+intent = { path = "../intent/" }
+plonky2 = "0.1.3"
+plonky2_ecdsa = "0.1.0"
+p256 = "0.13.2"
+secp256k1 = { version = "0.27.0", features = ["bitcoin-hashes", "rand-std"] }
+num-bigint = "0.4.3"
