--- a/conversions/Cargo.toml
+++ b/conversions/Cargo.toml
@@ -14,3 +14,6 @@ plonky2 = "0.1.3"
 plonky2_ecdsa = "0.1.0"
 rand = "0.8.5"
 thiserror = "1.0.40"
+
+[dev-dependencies]
+eth-wallet = { path = "../eth-wallet" }
