--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
-name = "mock-wallet"
+name = "types"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libsecp256k1 = "0.7.1"
 hex-literal = "0.4.1"
 intent = { path = "../intent/" }
+libsecp256k1 = "0.7.1"
+num-bigint = "0.4.3"
 plonky2 = "0.1.3"
 plonky2_ecdsa = "0.1.0"
-secp256k1 = { version = "0.27.0", features = ["bitcoin-hashes", "rand-std"] }
-num-bigint = "0.4.3"
+rand = "0.8.5"
+thiserror = "1.0.40"
