--- a/intent/Cargo.toml
+++ b/intent/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+conversions = { path = "../conversions" }
 hex-literal = "0.4.1"
 keccak-hash = "0.10.0"
 plonky2 = "0.1.3"
