--- a/intent/Cargo.toml
+++ b/intent/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.71"
+
 conversions = { path = "../conversions" }
 hex-literal = "0.4.1"
 keccak-hash = "0.10.0"
