--- a/intent/Cargo.toml
+++ b/intent/Cargo.toml
@@ -9,10 +9,10 @@ edition = "2021"
 anyhow = "1.0.71"
 
 binary_search_tree = "0.2.2"
-conversions = { path = "../conversions" }
 hex-literal = "0.4.1"
 keccak-hash = "0.10.0"
 plonky2 = "0.1.3"
 plonky2_ecdsa = "0.1.0"
 num-bigint = "0.4.3"
 serde = "1.0.163"
+types = { path = "../types" }
