--- a/intent/Cargo.toml
+++ b/intent/Cargo.toml
@@ -13,6 +13,7 @@ hex-literal = "0.4.1"
 keccak-hash = "0.10.0"
 plonky2 = "0.1.3"
 plonky2_ecdsa = "0.1.0"
+merkle-tree = { path = "../merkle-tree" }
 num-bigint = "0.4.3"
 serde = "1.0.163"
 types = { path = "../types" }
