--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,20 @@ members = [
     "eth-wallet",
     "intent",
     "types",
+    "zkvm/host",
+    "zkvm/methods",
 ]
+
+# Always optimize; building and running the guest takes much longer without optimization.
+[profile.dev]
+opt-level = 3
+
+[profile.dev.build-override]
+opt-level = 3
+
+[profile.release]
+debug = 1
+lto = true
+
+[profile.release.build-override]
+opt-level = 3
