--- a/eth-wallet/Cargo.toml
+++ b/eth-wallet/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 hex-literal = "0.4.1"
-intent = { path = "../intent/" }
+solina = { path = "../solina/" }
 libsecp256k1 = "0.7.1"
 num-bigint = "0.4.3"
 plonky2 = "0.1.3"
