--- a/eth-wallet/Cargo.toml
+++ b/eth-wallet/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.71"
 hex-literal = "0.4.1"
 solina = { path = "../solina/" }
 libsecp256k1 = "0.7.1"
