--- a/solina-zkvm/methods/guest/Cargo.toml
+++ b/solina-zkvm/methods/guest/Cargo.toml
@@ -6,10 +6,9 @@ edition = "2021"
 [workspace]
 
 [dependencies]
-anyhow = "1.0.71"
-hex-literal = "0.4.1"
+# anyhow = "1.0.71"
 keccak-hash = "0.10.0"
 num-bigint = "0.4.3"
 risc0-zkvm = { version = "0.15.3", default-features = false }
-solina = { path = "../../../solina" }
-types = { path = "../../../types" }
+# solina = { path = "../../../solina" }
+# types = { path = "../../../types" }
