--- a/solina/Cargo.toml
+++ b/solina/Cargo.toml
@@ -6,11 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.71"
 
-types = { path = "../types" }
-plonky2 = "0.1.3"
-plonky2_ecdsa = "0.1.0"
 num-bigint = "0.4.3"
-serde = "1.0.163"
+# serde = "1.0.152"
 keccak-hash = "0.10.0"
+thiserror = "1.0.39"
